--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
 Werkzeug==0.15.5
-scipy==0.15.1
-tpot==0.11.0
+scipy>=0.15.1
+tpot>=0.11.0
 cloudpickle>=0.6.0
 joblib==0.14.0
